wflow_publish("analysis/index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -17,6 +17,7 @@ editor_options:
 * [mean variance relationship in real single cell data](mean_var_relationship_in_real_sc_data.html)
 * [attempt to reduce run time](attempt_to_speed_up_add_greedy.html)
 * [memory usage analysis](splitting_PMF_memory_issue.html)
+* [size of sigma2 on convergence speed](size_of_sigma2_on_convergence.html)
 
 ### Simulation 
 
