--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -18,6 +18,7 @@ editor_options:
 * [attempt to reduce run time](attempt_to_speed_up_add_greedy.html)
 * [memory usage analysis](splitting_PMF_memory_issue.html)
 * [size of sigma2 on convergence speed](size_of_sigma2_on_convergence.html)
+* [fit K=1 on pbmc data](run_splitting_PMF_K1.html)
 
 ### Simulation 
 
@@ -32,6 +33,7 @@ editor_options:
 * [run PMF on PBMC data, 3 cell types, nonnegative loadings](run_PMF_on_pbmc_3cells_nonnegativeL_more_iterations.html)
 * [run PMF on PBMC data, 3 cell types, nonnegative loadings and factors](run_PMF_on_pbmc_3cells_nonnegativeLF_more_iterations.html)
 * [Compare VGA iterations on PBMC data, 3 cell types](compare_vga_iterations.html)
+* [Compare VGA iterations on PBMC data, full dataset](compare_vga_iterations_pbmc_full.html)
 * [run PMF on PBMC data](run_PMF_on_pbmc_more_iterations.html)
 * [run PMF on PBMC data,nonnegative Loadings](run_PMF_on_pbmc_nonnegativeL_more_iterations.html)
 * [run PMF on PBMC data,nonnegative Loadings and factors](run_PMF_on_pbmc_nonnegativeLF_more_iterations.html)
