wflow_publish("analysis/run_PMF_on_droplet.Rmd")

--- a/analysis/run_PMF_on_droplet.Rmd
+++ b/analysis/run_PMF_on_droplet.Rmd
@@ -9,49 +9,47 @@ editor_options:
 
 ## Introduction
 
-The droplet dataset is from Peter and stored on RCC. I ran splitting PMF on the dataset.
+```{r}
+fit = readRDS('/project2/mstephens/dongyue/poisson_mf/droplet/ebpmf_droplet_vga3.rds')
+load('/project2/mstephens/pcarbo/git/single-cell-topics/data/droplet.RData')
+source('code/poisson_STM/plot_factors.R')
+source('code/poisson_STM/plot_factors_general.R')
 
-The dataset initially has 7193 cells and 18388 genes. I tried to run PMF on the dataset with 32GB memory but got an error saying out of memory. I don't know why but likely due to the vga step that I'm using a vector of size 7193*18388?
-
-So I filtered out genes that has no expressio in more than $3%$ of the total cells. The resulting dataset has 7193 cells and 8701 genes. I set the scaling factors as $s_{ij} = \frac{y_{i+}y_{+j}}{y_{++}}$. For comparison, I also fit `flash` on transformed count data, as $\tilde{y}_{ij} = \log(1+\frac{y_{ij}}{s_{ij}}\frac{a_j}{0.5})$ where $a_j = median(s_{\cdot j})$. This transformation is derived from $\tilde{y}_{ij} = \log(\frac{y_{ij}}{s_{ij}}+\frac{0.5}{a_j})$. 
+```
 
 ```{r}
-fit = readRDS('output/poisson_MF_simulation/droplet.rds')
-fit_flashier = readRDS('output/poisson_MF_simulation/fit_flashier_droplet_filter_gene.rds')
+dim(counts)
+table(samples$tissue)
 ```
 
 ```{r}
 fit$run_time
-length(fit$eblo_trace)
+plot(fit$elbo_trace,type='l')
+plot(fit$K_trace,type='l')
+plot(fit$fit_flash$pve)
+plot(fit$sigma2_trace[,which.max(fit$sigma2)],type='l',ylab='',main='convergence of largest sigma2')
+round(unlist(lapply(fit$run_time_break_down,median)),3)
 ```
 
 ```{r}
-fit$fit_flash$n.factors
-plot(fit$K_trace)
-plot(fit$sigma2,ylab = 'sigma2',xlab='gene',col='grey50')
-fit$fit_flash$pve
+plot.factors(fit$fit_flash,samples$tissue,title='splitting PMF')
 ```
 
 ```{r}
-library(Matrix)
-load('data/real_data_singlecell/droplet.RData')
-genes = (colSums(counts>0) > (dim(counts)[1]*0.03))
-counts = counts[,genes]
-```
-
-Use Jason's method for visualizing loadings:
-
-```{r}
-source('code/poisson_STM/plot_factors.R')
+glmpca_nb = readRDS('/project2/mstephens/dongyue/poisson_mf/droplet/glmpca_droplet_nb.rds')
+glmpca_poi = readRDS('/project2/mstephens/dongyue/poisson_mf/droplet/glmpca_droplet_poi.rds')
+flash_fit = readRDS('/project2/mstephens/dongyue/poisson_mf/droplet/flash_droplet.rds')
 ```
 
 ```{r}
-cell_names = as.character(samples$tissue)
-plot.factors(fit$fit_flash,cell_names,title='splitting PMF')
+plot.factors(flash_fit,samples$tissue,title='flash')
 ```
 
 ```{r}
-plot.factors(fit_flashier,cell_names,title='flashier')
+plot.factors.general(glmpca_poi$loadings,samples$tissue,title='glmpca pois')
+plot.factors.general(glmpca_nb$loadings,samples$tissue,title='glmpca nb')
 ```
+
+
 
 
