--- a/analysis/binomial_mean_spliiting.Rmd
+++ b/analysis/binomial_mean_spliiting.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "binomial mean spliiting method"
+title: "binomial mean spliting method"
 author: "DongyueXie"
 date: "2022-11-17"
 output: workflowr::wflow_html
@@ -9,9 +9,21 @@ editor_options:
 
 ## Introduction
 
+Here we study if splitting method work for binomial and Bernoulli data.
+
+The basic model is 
+
+$$x_i\sim Binomial(n_i,\sigma(\mu_i))$$
+$$\mu_i|b_i\sim N(b_i,\sigma^2)$$
+$$b_i\sim g(\cdot).$$
+
+I generated $\mu_i\sim \pi_0\delta_0 + \pi_1 N(0,1)$ where $\pi_0 = 0.8$.
+
 ```{r}
 source("code/binomial_mean/binomial_mean_splitting.R")
 ```
+
+### Binomial n = 100
 
 ```{r}
 set.seed(12345)
@@ -26,36 +38,124 @@ x = rbinom(n,nb,p)
 ```{r}
 library(ashr)
 fit_ash = ashr::ash(rep(0,n),1,lik=lik_binom(x,nb,link='identity'))
-fit_split = binomial_mean_splitting(x,nb,printevery = 1,n_gh=10,
+fit_split = binomial_mean_splitting(x,nb,printevery = 100,n_gh=10,
                                     b_pm_init = NULL,sigma2_init = NULL,
                                     ebnm_params = list(prior_family='normal_scale_mixture'))
-fit_GG = binomial_mean_GG(x,nb,printevery = 1,n_gh=10)
+fit_GG = binomial_mean_GG(x,nb,printevery = 100,n_gh=10)
 ```
 
 ```{r}
-plot(x/nb,col='grey80')
+plot(x/nb,col='grey80',main='ash fit')
 lines(p,col='grey80')
 lines(fit_ash$result$PosteriorMean,col=2)
 ```
 
 ```{r}
-plot(x/nb,col='grey80')
+plot(x/nb,col='grey80',main='splitting fit latent m')
 lines(p,col='grey80')
 lines(fit_split$posterior$mean,col=4)
 ```
 
 ```{r}
-plot(x/nb,col='grey80')
+plot(x/nb,col='grey80',main='splitting fit latent b')
 lines(p,col='grey80')
 lines(sigmoid(fit_split$posterior$mean_b),col=4)
 ```
 
 ```{r}
-plot(x/nb,col='grey80')
+plot(x/nb,col='grey80',main='vga binom fit')
 lines(p,col='grey80')
 lines(fit_GG$posterior$mean,col=3)
 ```
 
 
+### Binomial n = 10
 
+```{r}
+set.seed(12345)
+n = 500
+nb = rep(10,n)
+w = 0.8
+mu = c(rep(0,n*w),rnorm(round(n*(1-w))))
+p = sigmoid(mu)
+x = rbinom(n,nb,p)
+```
+
+```{r}
+library(ashr)
+fit_ash = ashr::ash(rep(0,n),1,lik=lik_binom(x,nb,link='identity'))
+fit_split = binomial_mean_splitting(x,nb,printevery = 100,n_gh=10,
+                                    b_pm_init = NULL,sigma2_init = NULL,
+                                    ebnm_params = list(prior_family='normal_scale_mixture'))
+fit_GG = binomial_mean_GG(x,nb,printevery = 100,n_gh=10)
+```
+
+```{r}
+plot(x/nb,col='grey80',main='ash fit')
+lines(p,col='grey80')
+lines(fit_ash$result$PosteriorMean,col=2)
+```
+
+```{r}
+plot(x/nb,col='grey80',main='splitting fit latent m')
+lines(p,col='grey80')
+lines(fit_split$posterior$mean,col=4)
+```
+
+```{r}
+plot(x/nb,col='grey80',main='splitting fit latent b')
+lines(p,col='grey80')
+lines(sigmoid(fit_split$posterior$mean_b),col=4)
+```
+
+```{r}
+plot(x/nb,col='grey80',main='vga binom fit')
+lines(p,col='grey80')
+lines(fit_GG$posterior$mean,col=3)
+```
+
+### Bernoulli
+
+```{r}
+set.seed(12345)
+n = 500
+nb = rep(1,n)
+w = 0.8
+mu = c(rep(0,n*w),rnorm(round(n*(1-w))))
+p = sigmoid(mu)
+x = rbinom(n,nb,p)
+```
+
+```{r}
+library(ashr)
+fit_ash = ashr::ash(rep(0,n),1,lik=lik_binom(x,nb,link='identity'))
+fit_split = binomial_mean_splitting(x,nb,printevery = 100,n_gh=10,
+                                    b_pm_init = NULL,sigma2_init = NULL,
+                                    ebnm_params = list(prior_family='normal_scale_mixture'))
+fit_GG = binomial_mean_GG(x,nb,printevery = 100,n_gh=10)
+```
+
+```{r}
+plot(x/nb,col='grey80',main='ash fit')
+lines(p,col='grey80')
+lines(fit_ash$result$PosteriorMean,col=2)
+```
+
+```{r}
+plot(x/nb,col='grey80',main='splitting fit latent m')
+lines(p,col='grey80')
+lines(fit_split$posterior$mean,col=4)
+```
+
+```{r}
+plot(x/nb,col='grey80',main='splitting fit latent b')
+lines(p,col='grey80')
+lines(sigmoid(fit_split$posterior$mean_b),col=4)
+```
+
+```{r}
+plot(x/nb,col='grey80',main='vga binom fit')
+lines(p,col='grey80')
+lines(fit_GG$posterior$mean,col=3)
+```
 
