wflow_publish("analysis/index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -63,6 +63,8 @@ Below are some analysis I have done, before putting $l_0,f_0$ as part of flash, 
 
 ### On PBMC 68K
 
+* [PBMC 68K result](pbmc68k_reults.html)
+
 ### On Pancreas data
 
 ## Poisson mean 
