--- a/analysis/pbmc_infasttopics_init_vga_effect.Rmd
+++ b/analysis/pbmc_infasttopics_init_vga_effect.Rmd
@@ -7,6 +7,30 @@ editor_options:
   chunk_output_type: console
 ---
 
+## Conclusion
+
+At iter 20
+
+```{r}
+x = cbind(c(-9020841,-8970580,-8941787,-8938047,-8907999,-8943078),
+          c(0.1124,0.1951,0.4025,0.8480,1.5271,2.3999),
+          c(7,7,8,8,10,10),
+          c(20,20,20,20,20,20))
+colnames(x) = c('elbo','var','K','iter')
+knitr::kable(x)
+```
+
+At convergence.
+
+```{r}
+x = cbind(c(-8900823,-8870821,-8846708,-8895574),
+          c(0.3987,0.7643,1.3230,2.2076),
+          c(8,11,10,10),
+          c(60,60,60,35))
+colnames(x) = c('elbo','var','K','iter')
+knitr::kable(x)
+```
+
 ## Introduction
 
 Recall the initialization of ebpmf is based on solving an poisson mean problem with normal prior. And when the prior mean is negative, and the data vector is very sparse, the estimated variance tends to be very small. Here I I study how the results differ for different init variance values.
@@ -32,7 +56,7 @@ fit$elbo
 plot(fit$K_trace)
 hist(fit$sigma2,breaks = 100)
 summary(fit$sigma2)
-structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-10,iter20')
+p=structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-10,iter20')
 plot(fit$sigma2,colSums(counts/rowSums(counts)),pch=20,col='grey80')
 ```
 
@@ -46,7 +70,7 @@ fit$elbo
 plot(fit$K_trace)
 hist(fit$sigma2,breaks = 100)
 summary(fit$sigma2)
-structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-8,iter20')
+p=structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-8,iter20')
 plot(fit$sigma2,colSums(counts/rowSums(counts)),pch=20,col='grey80')
 ```
 
@@ -61,7 +85,7 @@ fit$elbo
 plot(fit$K_trace)
 hist(fit$sigma2,breaks = 100)
 summary(fit$sigma2)
-structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-6,iter20')
+p=structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-6,iter20')
 plot(fit$sigma2,colSums(counts/rowSums(counts)),pch=20,col='grey80')
 ```
 
@@ -72,7 +96,7 @@ fit$elbo
 plot(fit$K_trace)
 hist(fit$sigma2,breaks = 100)
 summary(fit$sigma2)
-structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-6,iter60')
+p=structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-6,iter60')
 plot(fit$sigma2,colSums(counts/rowSums(counts)),pch=20,col='grey80')
 ```
 
@@ -86,7 +110,7 @@ fit$elbo
 plot(fit$K_trace)
 hist(fit$sigma2,breaks = 100)
 summary(fit$sigma2)
-structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-4,iter20')
+p=structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-4,iter20')
 plot(fit$sigma2,colSums(counts/rowSums(counts)),pch=20,col='grey80')
 ```
 
@@ -96,7 +120,7 @@ fit$elbo
 plot(fit$K_trace)
 hist(fit$sigma2,breaks = 100)
 summary(fit$sigma2)
-structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-4,iter60')
+p=structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-4,iter60')
 plot(fit$sigma2,colSums(counts/rowSums(counts)),pch=20,col='grey80')
 ```
 
@@ -110,7 +134,7 @@ fit$elbo
 plot(fit$K_trace)
 hist(fit$sigma2,breaks = 100)
 summary(fit$sigma2)
-structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-2,iter20')
+p=structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-2,iter20')
 plot(fit$sigma2,colSums(counts/rowSums(counts)),pch=20,col='grey80')
 ```
 
@@ -120,7 +144,7 @@ fit$elbo
 plot(fit$K_trace)
 hist(fit$sigma2,breaks = 100)
 summary(fit$sigma2)
-structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-2,iter60')
+p=structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-2,iter60')
 plot(fit$sigma2,colSums(counts/rowSums(counts)),pch=20,col='grey80')
 ```
 
@@ -134,7 +158,7 @@ fit$elbo
 plot(fit$K_trace)
 hist(fit$sigma2,breaks = 100)
 summary(fit$sigma2)
-structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-1,iter20')
+p=structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-1,iter20')
 plot(fit$sigma2,colSums(counts/rowSums(counts)),pch=20,col='grey80')
 ```
 
@@ -145,6 +169,10 @@ fit$elbo
 plot(fit$K_trace)
 hist(fit$sigma2,breaks = 100)
 summary(fit$sigma2)
-structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-1,iter35')
+p=structure_plot_general(fit$fit_flash$L.pm,fit$fit_flash$F.pm,pbmc_facs$samples$subpop,title='1e-1,iter35')
 plot(fit$sigma2,colSums(counts/rowSums(counts)),pch=20,col='grey80')
 ```
+
+
+
+
