wflow_publish("analysis/index.Rmd")

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -30,7 +30,8 @@ editor_options:
 * [Simulation based on PBMC data, 3 cell types](simulation_based_on_pbmc_3cell.html)
 * [Simulation based on PBMC data, 3 cell types, 1 init backfitting](splitting_PMF_1backfitinit.html)
 * [Simulation pbmc data from fasttopics, nonnegtive L and F](simu_pbmc_fasttpoics_nonnegLF.html)
-* [Simulation pbmc data from fasttopics, nonnegtive L and F, more variance](simu_study_of_init_variance.html)
+* [Simulation data from fitted model on pbmc data in fasttopics, nonnegtive L and F](simu_study_of_init_variance.html)
+* [Simulation data from fitted model on pbmc data in fasttopics, nonnegtive L and F, true sigma2 = 0]()
 
 ### On pbmc3k
 
