--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -31,7 +31,7 @@ editor_options:
 * [Simulation based on PBMC data, 3 cell types, 1 init backfitting](splitting_PMF_1backfitinit.html)
 * [Simulation pbmc data from fasttopics, nonnegtive L and F](simu_pbmc_fasttpoics_nonnegLF.html)
 * [Simulation data from fitted model on pbmc data in fasttopics, nonnegtive L and F](simu_study_of_init_variance.html)
-* [Simulation data from fitted model on pbmc data in fasttopics, nonnegtive L and F, true sigma2 = 0]()
+* [Simulation data from fitted model on pbmc data in fasttopics, nonnegtive L and F, true sigma2 = 0](simu_study_pbmc_truevar0.html)
 
 ### On pbmc3k
 
